--- a/Project1-Complete/css/styleadmin.css
+++ b/Project1-Complete/css/styleadmin.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../images/bg.jpg);
+    background-image: url(../images/bialogin.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
